fix nav on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,18 @@
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
-    color: #3a3a3a;
-   
+    color: white;
+    background-color: black;
 }
 
-header  {
-    background-color: #f0f0f0;
+header {
+    background-color: yellow;
     width: 100%;
     height: 100px;
-    font-size: 1rem;
+    font-size: 24px;
 }
+
+
 
 h1 {
     font-family: Oswald;
@@ -26,34 +28,55 @@ h1 {
 #name {
     float: left;
     font-size: 300%;
-    
+
 }
 
-nav {
-    float: right;
-    
+nav ul {
+    text-align: center;
+
 }
 
 nav li {
+    
+    margin-right: 40px;
+    margin-left: 40px;
     display: inline-block;
     
-    margin-right: 20px;
 }
 
 nav a {
     text-decoration: none;
+    color: #3a3a3a;
 }
 
-nav, #name {
+nav,
+#name {
     line-height: 75px;
 }
 
-nav a:hover{
+nav a:hover {
     border-bottom: 3px dotted #3a3a3a;
 }
 
 .photo {
     width: 20%;
     position: absolute;
-    left: 0px;
+    left: 60%;
+    border-radius: 50%;
+    top: 30%;
 }
+
+@media (max-width: 600px) {
+    nav {
+      font-size: 14px;
+    }
+    
+    nav ul {
+      text-align: center;
+    }
+  
+    nav li {
+      margin-right: 20px;
+      margin-left: 20px;
+    }
+  }
